fix: steps not showing inside admonition

--- a/material_joapuiib/templates/stylesheets/steps.css
+++ b/material_joapuiib/templates/stylesheets/steps.css
@@ -22,7 +22,6 @@
 	 position: absolute;
 	 top: 0;
 	 left: 0;
-	 z-index: -1;
 	 display: block;
 	 width: 1.75em;
 	 height: 1.75em;
